@@ -86,7 +86,7 @@ public abstract class OClassImpl implements OClass {
   protected volatile OClusterSelectionStrategy clusterSelection; // @SINCE 1.7
   protected volatile int hashCode;
 
-  private static Set<String> reserved = new HashSet<String>();
+  private static final Set<String> reserved = new HashSet<String>();
 
   static {
     // reserved.add("select");
@@ -241,7 +241,7 @@ public abstract class OClassImpl implements OClass {
   @Override
   @Deprecated
   public OClass setSuperClass(OClass iSuperClass) {
-    setSuperClasses(iSuperClass != null ? Arrays.asList(iSuperClass) : Collections.EMPTY_LIST);
+    setSuperClasses(iSuperClass != null ? List.of(iSuperClass) : Collections.EMPTY_LIST);
     return this;
   }
 
@@ -258,7 +258,7 @@ public abstract class OClassImpl implements OClass {
   public List<OClass> getSuperClasses() {
     acquireSchemaReadLock();
     try {
-      return Collections.unmodifiableList((List<? extends OClass>) superClasses);
+      return Collections.unmodifiableList(superClasses);
     } finally {
       releaseSchemaReadLock();
     }
@@ -570,7 +570,7 @@ public abstract class OClassImpl implements OClass {
     properties.putAll(newProperties);
     customFields = document.field("customFields", OType.EMBEDDEDMAP);
     clusterSelection =
-        owner.getClusterSelectionFactory().getStrategy((String) document.field("clusterSelection"));
+        owner.getClusterSelectionFactory().getStrategy(document.field("clusterSelection"));
   }
 
   protected abstract OPropertyImpl createPropertyInstance();
@@ -810,14 +810,8 @@ public abstract class OClassImpl implements OClass {
       }
       final OClass other = (OClass) obj;
       if (name == null) {
-        if (other.getName() != null) {
-          return false;
-        }
-      } else if (!name.equals(other.getName())) {
-        return false;
-      }
-
-      return true;
+        return other.getName() == null;
+      } else return name.equals(other.getName());
     } finally {
       releaseSchemaReadLock();
     }
@@ -1069,11 +1063,7 @@ public abstract class OClassImpl implements OClass {
     if (s.startsWith("'") && s.endsWith("'")) {
       return true;
     }
-    if (s.startsWith("`") && s.endsWith("`")) {
-      return true;
-    }
-
-    return false;
+    return s.startsWith("`") && s.endsWith("`");
   }
 
   public abstract OClassImpl setEncryption(final String iValue);
